--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "opioid-converter",
-  "version": "0.1.0",
-  "private": true,
+  "version": "2.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/cooperability/opioid-converter.git",
+  "author": "<cooperability@gmail.com>",
+  "license": "MIT",
+  "private": false,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.3",
-    "typescript": "^3.9.7"
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
+    "bootstrap": "^5.3.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
